RESOLVED FIXED52950
Leak in WebPage::drawRectToPDF
https://bugs.webkit.org/show_bug.cgi?id=52950
Summary Leak in WebPage::drawRectToPDF
Alexey Proskuryakov
Reported 2011-01-21 23:37:07 PST
When converting the function to use RetainPtr, I missed the variable that actually leaked. Patch forthcoming.
Attachments
proposed fix (1.54 KB, patch)
2011-01-21 23:38 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-01-21 23:38:17 PST
Created attachment 79831 [details] proposed fix
WebKit Commit Bot
Comment 2 2011-01-22 01:15:15 PST
Comment on attachment 79831 [details] proposed fix Clearing flags on attachment: 79831 Committed r76434: <http://trac.webkit.org/changeset/76434>
WebKit Commit Bot
Comment 3 2011-01-22 01:15:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.