2011-01-22  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=52950
        Leak in WebPage::drawRectToPDF

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::drawRectToPDF): Use RetainPtr here, too.

Canonical link: https://commits.webkit.org/66668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76434 268f45cc-cd09-0410-ab3c-d52691b4dbfc